--- a/style.css
+++ b/style.css
@@ -14,14 +14,22 @@ h1 {
   background-color: #222;
   color: #fff;
   border: 1px solid #444;
-  padding: 10px 20px;
+  padding: 12px 24px;
   margin: 5px;
   cursor: pointer;
   border-radius: 5px;
+  font-size: 18px;
 }
 
 #boss-buttons button:hover {
   background-color: #444;
+}
+
+#boss-buttons img {
+  height: 24px;
+  transform: scale(1.2);
+  vertical-align: middle;
+  margin-right: 8px;
 }
 
 #rankings {
@@ -33,7 +41,6 @@ h1 {
 }
 
 .rank-entry {
-  color: #9482C9;
   font-weight: bold;
   margin: 5px 0;
 }
