--- a/style.css
+++ b/style.css
@@ -14,14 +14,21 @@ h1 {
   background-color: #222;
   color: #fff;
   border: 1px solid #444;
-  padding: 10px 20px;
+  padding: 12px 24px;
   margin: 5px;
   cursor: pointer;
   border-radius: 5px;
+  font-size: 20px;
 }
 
 #boss-buttons button:hover {
   background-color: #444;
+}
+
+#boss-buttons img {
+  height: 32px;
+  vertical-align: middle;
+  margin-right: 8px;
 }
 
 #rankings {
@@ -37,3 +44,4 @@ h1 {
   font-weight: bold;
   margin: 5px 0;
 }
+
