--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-
 body {
   background-color: #0e0e0e;
   color: #fff;
   font-family: 'Segoe UI', sans-serif;
   padding: 20px;
   text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -63,7 +65,6 @@ h1 {
   flex-direction: column;
   align-items: center;
   text-decoration: none;
-  width: 60px;
 }
 
 .talent-icon-img {
